k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: monitoring-issuer
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-1234, subnet-5678
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:1234567:certificate/abcde
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: "sentinel-group"

spec:
  ingressClassName: alb
  rules:
    - host: kibana.btc-awesome.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc     #ALB 대상을 내 웹서비스로
                port:
                  number: 5601

    - host: grafana.btc-awesome.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana     #ALB 대상을 내 웹서비스로
                port:
                  number: 3000

    - host: prometheus.btc-awesome.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service     #ALB 대상을 내 웹서비스로
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    cert-manager.io/issuer: monitoring-issuer
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-1234, subnet-5678
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:1234567:certificate/abcde
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: "sentinel-group"
    alb.ingress.kubernetes.io/backend-protocol: HTTPS


spec:
  ingressClassName: alb
  rules:
    - host: argocd.btc-awesome.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server   #ALB 대상을 내 웹서비스로
                port:
                  number: 80
